Turn main-head into page-heading container

--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -17,10 +17,10 @@
   </header>
 
     <main>
-      <ul class="main-head">
-        <li><h1 class="page-heading">Newsletter</h1></li>
-        <li><p class="page-description">Escolha seus assuntos favoritos e impulsione sua carreira. Todas as terças, no seu email.</p></li>
-      </ul>
+      <div class="page-heading">
+        <h1 class="page-title">Newsletter</h1>
+        <p>Escolha seus assuntos favoritos e impulsione sua carreira. Todas as terças, no seu email.</p>
+      </div> 
 
         <ul>
           <li class="job-card row space-between">
