--- a/pages/vagas.html
+++ b/pages/vagas.html
@@ -17,9 +17,13 @@
   </header>
 
     <main>
-      <ul class="main-head">
-        <li><h1 class="page-heading">Vagas</h1></li>
-      </ul>
+      <div class="page-heading">
+        <h1 class="page-title">Vagas</h1>
+      </div>
+
+
+      <h1 class="page-heading">Vagas</h1>
+      
 
         <ul class="row">
           <li><button class="filter-badge">JavaScript</button></li>
