--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
   <header class="header row space-between">
     <img src="./assets/img/icons/menu.svg" alt="Ícone de menu.">
     <img class="header--profile-picture" src="./assets/img/profilePicture.png" alt="Foto de perfil do usuário.">
-
   </header>
 
     <main>
-      <ul class="main-head">
-        <li><h1 class="page-heading">Bom dia, Pedro</h1></li>
-      </ul>
+      <div class="page-heading">
+        <h1 class="page-title">Bom dia, Pedro</h1>
+      </div>
 
         <section class="section">
             <h2 class="section-heading">Vagas de Estágio</h2>
