Commit de honra: tudo certo

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
 
-    <link rel="stylesheet" href="./../assets/css/reset.css">
-    <link rel="stylesheet" href="./../assets/css/style.css">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home</title>
+
+  <link rel="stylesheet" href="./../assets/css/reset.css">
+  <link rel="stylesheet" href="./../assets/css/style.css">
 </head>
+
 <body>
-    <nav class="navbar">
-            <img src="./../assets/img/icons/x.svg" alt="Ícone de fechar pagina.">
-        <ul class="nav-items">
-            <li class = 'row components'>
-                <a class="icone">
-                    <img src="./../assets/img/icons/home.svg" alt="Ícone de home.">
-                </a>
-                <p class = 'negrito'>Home</p>
-            </li>
-            <li class = 'row components'>
-                <a class="icone">
-                    <img src="./../assets/img/icons/case.svg" alt="Ícone de Vagas.">
-                </a>
-                <p class = 'negrito'>Vagas</p>
-            </li>
-            <li class = 'row components'>
-                <a class="icone">
-                    <img src="./../assets/img/icons/hat.svg" alt="Ícone de Candidaturas.">
-                </a>
-                <p class = 'negrito'>Candidaturas</p>
-            </li>
-        </ul>
-    </nav>
+  <nav class="navbar">
+    <img src="./../assets/img/icons/x.svg" alt="Ícone de fechar pagina.">
+    <ul class="ml-4 nav-items">
+      <li>
+        <a class="icone row items-center components mb-4" href="./../index.html">
+          <img class="mr-4" src="./../assets/img/icons/home.svg" alt="Ícone de home.">
+          <p class='negrito'>Home</p>
+        </a>
+      </li>
+
+      <li>
+        <a class="icone row items-center components mb-4" href="./vagas.html">
+          <img class="mr-4" src="./../assets/img/icons/case.svg" alt="Ícone de home.">
+          <p class='negrito'>Vagas</p>
+        </a>
+      </li>
+
+      <li>
+        <a class="icone row items-center components mb-4" href="./candidaturas.html">
+          <img class="mr-4" src="./../assets/img/icons/hat.svg" alt="Ícone de home.">
+          <p class='negrito'>Candidaturas</p>
+        </a>
+      </li>
+
+    </ul>
+  </nav>
 </body>
+
 </html>
