--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -12,15 +12,19 @@
 <body>
 
   <header class="header row space-between">
-    <img src="./../assets/img/icons/menu.svg" alt="Ícone de menu.">
-    <img class="header--profile-picture" src="./../assets/img/profilePicture.png" alt="Foto de perfil do usuário.">
+    <a class="self-center" href="./../pages/menu.html">
+      <img src="./../assets/img/icons/menu.svg" alt="Ícone de menu.">
+    </a>
+    <a href="./../pages/perfil.html">
+      <img class="header--profile-picture" src="./../assets/img/profilePicture.png" alt="Foto de perfil do usuário.">
+    </a>
   </header>
 
     <main>
       <div class="page-heading">
         <h1 class="page-title">Newsletter</h1>
         <p>Escolha seus assuntos favoritos e impulsione sua carreira. Todas as terças, no seu email.</p>
-      </div> 
+      </div>
 
         <ul>
           <li class="job-card row space-between">
