--- a/pages/vaga.html
+++ b/pages/vaga.html
@@ -1,53 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estágio de Engenharia de Software</title>
 
-    <link rel="stylesheet" href="./../assets/css/reset.css">
-    <link rel="stylesheet" href="./../assets/css/style.css">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Estágio de Engenharia de Software</title>
+
+  <link rel="stylesheet" href="./../assets/css/reset.css">
+  <link rel="stylesheet" href="./../assets/css/style.css">
 </head>
+
 <body>
 
   <header class="header row space-between">
-    <img src="./../assets/img/icons/menu.svg" alt="Ícone de menu.">
-    <img class="header--profile-picture" src="./../assets/img/profilePicture.png" alt="Foto de perfil do usuário.">
+    <a class="self-center" href="./../pages/menu.html">
+      <img src="./../assets/img/icons/menu.svg" alt="Ícone de menu.">
+    </a>
+    <a href="./../pages/perfil.html">
+      <img class="header--profile-picture" src="./../assets/img/profilePicture.png" alt="Foto de perfil do usuário.">
+    </a>
   </header>
 
-    <main>
-      <div class="listing-header">
-        <h1>Estágio em Engenharia de Software</h1>
+  <main>
+    <div class="listing-header">
+      <h1 class="medium-heading">Estágio em Engenharia de Software</h1>
 
-        <div class="listing-details row">
-          <img class="listing-logo" src="./../assets/img/companyLogo.png" alt="Logo da empresa.">
-          <div class="column">
-            <h3>Giant Steps Capital</h3>
-            <p>Faria Lima, São Paulo</p>  
-          </div>
+      <div class="listing-details row">
+        <img class="listing-logo" src="./../assets/img/companyLogo.png" alt="Logo da empresa.">
+        <div class="column">
+          <h3 class="semi-bold mb-1">Giant Steps Capital</h3>
+          <p>Faria Lima, São Paulo</p>
         </div>
       </div>
+    </div>
 
-      <section class="section">
-        <h2 class="section-heading">Descrição da vaga</h2>
+    <section class="section">
+      <h2 class="section-heading">Descrição da vaga</h2>
 
-        <p class="listing-description">
-          Já pensou em trabalhar com tecnologia em uma das principais empresas globais de gestão de fortunas? Estamos em busca de um(a) estagiário(a) que agregue o nosso time em atividades diárias e esteja sempre em busca de evoluir seus conhecimentos.
-        </p>
+      <p class="listing-description">
+        Já pensou em trabalhar com tecnologia em uma das principais empresas globais de gestão de fortunas? Estamos em
+        busca de um(a) estagiário(a) que agregue o nosso time em atividades diárias e esteja sempre em busca de evoluir
+        seus conhecimentos.
+      </p>
 
-        <a class="link-container" href="./pages/newsletter.html">
-          <button class="btn">
-              <span>Aplicar</span>
-              <img src="./../assets/img/icons/arrow.svg" alt="Ícone de seta para a direita.">
-          </button>
-        </a>
+      <a class="btn anchor" href="#">
+        <span>Aplicar</span>
+        <img src="./../assets/img/icons/arrow.svg" alt="Arrow icon.">
+      </a>
 
-      </section>
+    </section>
 
-    </main>
+  </main>
 
 
 
 </body>
+
 </html>
