Close menu button functionality

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -13,7 +13,9 @@
 
 <body>
   <nav class="navbar">
-    <img src="./../assets/img/icons/x.svg" alt="Ícone de fechar pagina.">
+    <button id="closeMenu">
+      <img src="./../assets/img/icons/x.svg" alt="Ícone de fechar pagina.">
+    </button>
     <ul class="ml-4 nav-items">
       <li>
         <a class="icone row items-center components mb-4" href="./../index.html">
@@ -38,6 +40,9 @@
 
     </ul>
   </nav>
+
+  <script src="./../assets/js/index.js"></script>
+
 </body>
 
 </html>
