Implement job application functionality

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -41,7 +41,7 @@
     </ul>
   </nav>
 
-  <script src="./../assets/js/index.js"></script>
+  <script src="./../assets/js/menu.js"></script>
 
 </body>
 
