--- a/pages/vaga.html
+++ b/pages/vaga.html
@@ -44,7 +44,7 @@
         seus conhecimentos.
       </p>
 
-      <a class="btn anchor" href="#">
+      <a class="btn anchor" id="applicationButton">
         <span>Aplicar</span>
         <img src="./../assets/img/icons/arrow.svg" alt="Arrow icon.">
       </a>
@@ -54,7 +54,7 @@
   </main>
 
 
-
+  <script src="./../assets/js/vaga.js"></script>
 </body>
 
 </html>
