--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vagas</title>
 
-    <link rel="stylesheet" href="./../assets/css/reset.css">
-    <link rel="stylesheet" href="./../assets/css/style.css">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vagas</title>
+
+  <link rel="stylesheet" href="./../assets/css/reset.css">
+  <link rel="stylesheet" href="./../assets/css/style.css">
 </head>
+
 <body>
 
   <header class="header row space-between">
@@ -20,41 +22,48 @@
     </a>
   </header>
 
-    <main>
-      <div class="page-heading">
-        <h1 class="page-title">Newsletter</h1>
-        <p>Escolha seus assuntos favoritos e impulsione sua carreira. Todas as terças, no seu email.</p>
-      </div>
+  <main>
+    <div class="page-heading">
+      <h1 class="page-title">Newsletter</h1>
+      <p>Escolha seus assuntos favoritos e impulsione sua carreira. Todas as terças, no seu email.</p>
+    </div>
 
-        <ul>
-          <li class="job-card row space-between">
-              <ul class="row items-center">
-                <li><img class="logo" src="./../assets/img/companyLogo.png" alt="Logo da empresa."></li>
-                <li><h3>Vagas de Estágio</h3></li>
-              </ul>
-              <img src="./../assets/img/icons/check.svg" alt="Ícone de afirmação.">
+    <ul>
+      <li class="job-card row space-between">
+        <ul class="row items-center">
+          <li><img class="logo" src="./../assets/img/companyLogo.png" alt="Logo da empresa."></li>
+          <li>
+            <h3>Vagas de Estágio</h3>
           </li>
+        </ul>
+        <img src="./../assets/img/icons/check.svg" alt="Ícone de afirmação.">
+      </li>
 
-          <li class="job-card row space-between">
-            <ul class="row items-center">
-              <li><img class="logo" src="./../assets/img/companyLogo.png" alt="Logo da empresa."></li>
-              <li><h3>Startups</h3></li>
-            </ul>
-            <img src="./../assets/img/icons/check.svg" alt="Ícone de afirmação.">
-        </li>
+      <li class="job-card row space-between">
+        <ul class="row items-center">
+          <li><img class="logo" src="./../assets/img/companyLogo.png" alt="Logo da empresa."></li>
+          <li>
+            <h3>Startups</h3>
+          </li>
+        </ul>
+        <img src="./../assets/img/icons/check.svg" alt="Ícone de afirmação.">
+      </li>
 
-        <li class="job-card row space-between">
-          <ul class="row items-center">
-            <li><img class="logo" src="./../assets/img/companyLogo.png" alt="Logo da empresa."></li>
-            <li><h3>Programação</h3></li>
-          </ul>
-          <img src="./../assets/img/icons/check.svg" alt="Ícone de afirmação.">
-        </li>
-      </ul>
+      <li class="job-card row space-between">
+        <ul class="row items-center">
+          <li><img class="logo" src="./../assets/img/companyLogo.png" alt="Logo da empresa."></li>
+          <li>
+            <h3>Programação</h3>
+          </li>
+        </ul>
+        <img src="./../assets/img/icons/check.svg" alt="Ícone de afirmação.">
+      </li>
+    </ul>
 
-    </main>
+  </main>
 
 
 
 </body>
+
 </html>
