Add menu go back functionality

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -9,11 +9,13 @@
 
   <link rel="stylesheet" href="./../assets/css/reset.css">
   <link rel="stylesheet" href="./../assets/css/style.css">
+
+  <script src="./../assets/js/index.js"></script>
 </head>
 
 <body>
   <nav class="navbar">
-    <img src="./../assets/img/icons/x.svg" alt="Ícone de fechar pagina.">
+    <img src="./../assets/img/icons/x.svg" id="close-menu" alt="Ícone de fechar pagina.">
     <ul class="ml-4 nav-items">
       <li>
         <a class="icone row items-center components mb-4" href="./../index.html">
