--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Busque um Estágio | Home</title>
 
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -23,7 +23,7 @@
 
   <main>
     <div class="page-heading">
-      <h1 class="large-heading">Bom dia, Pedro</h1>
+      <h1 class="large-heading">Bom dia, Fulano</h1>
     </div>
 
     <section class="section">
@@ -59,7 +59,7 @@
       </a>
     </section>
 
-    <section class="section">
+    <!-- <section class="section">
       <h2 class="section-heading">Conheça a nossa newsletter!</h2>
       <p class="paragraph">Fique por dentro dos assuntos mais relevantes do mercado e consiga o estágio dos seus sonhos.
       </p>
@@ -68,7 +68,7 @@
         <span>Assinar</span>
         <img src="./assets/img/icons/arrow.svg" alt="Arrow icon.">
       </a>
-    </section>
+    </section> -->
   </main>
 </body>
 
