--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
 
       <ul>
         <li class="job-card bg-gray">
-          <a href="./pages/vaga.html" class="row">
-            <img class="logo" src="./assets/img/companyLogo.png" alt="Logo da empresa.">
+          <a href="./pages/vaga/1.html" class="row">
+            <img class="logo" src="./assets/img/logos/google.webp" alt="Logo da empresa.">
             <div class="column space-between">
-              <h3>Desenvolvimento de Software</h3>
-              <p>Giant Steps Capital</p>
-              <p>Faria Lima, São Paulo</p>
+              <h3>Estágio em Engenharia de Software</h3>
+              <p>Google</p>
+              <p>Belo Horizonte, Minas Gerais</p>
             </div>
           </a>
         </li>
 
         <li class="job-card bg-gray">
-          <a href="./pages/vaga.html" class="row">
-            <img class="logo" src="./assets/img/companyLogo.png" alt="Logo da empresa.">
+          <a href="./pages/vaga/2.html" class="row">
+            <img class="logo" src="./assets/img/logos/btg.png" alt="Logo da empresa.">
             <div class="column space-between">
-              <h3>Desenvolvimento de Software</h3>
-              <p>Giant Steps Capital</p>
-              <p>Faria Lima, São Paulo</p>
+              <h3>Estágio em Equity Research</h3>
+              <p>BTG Pactual</p>
+              <p>São Paulo, São Paulo</p>
             </div>
           </a>
         </li>
