--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -36,7 +36,7 @@
           <img class="logo" src="./../assets/img/companyLogo.png" alt="Logo da empresa.">
           <div class="column gap-1">
             <h3 id="profile--university-name">Insper Instituto de Ensino e Pesquisa</h3>
-            <p>Faria Lima, São Paulo</p>
+            <p>São Paulo, São Paulo</p>
           </div>
         </li>
       </ul>
