--- a/pages/vagas.html
+++ b/pages/vagas.html
@@ -36,46 +36,46 @@
     </ul>
 
     <ul id="job-listings">
-      <li class="job-card jobs--job-card" data-tags="python ml">
-        <a href="./../pages/vaga.html" class="row">
-          <img class="logo" src="./../assets/img/companyLogo.png" alt="Logo da empresa.">
+      <li class="job-card jobs--job-card" data-tags="python js ml">
+        <a href="./vaga/1.html" class="row">
+          <img class="logo" src="./../assets/img/logos/google.webp" alt="Logo da empresa.">
           <div class="column space-between">
-            <h3 class="job-title">Publicidade e Marketing</h3>
-            <p class="company-name">XP inc.</p>
-            <p>Faria Lima, São Paulo</p>
+            <h3 class="job-title">Estágio em Engenharia de Software</h3>
+            <p class="company-name">Google</p>
+            <p>Belo Horizonte, Minas Gerais</p>
           </div>
         </a>
       </li>
 
       <li class="job-card jobs--job-card" data-tags="python">
-        <a href="./../pages/vaga.html" class="row">
-          <img class="logo" src="./../assets/img/companyLogo.png" alt="Logo da empresa.">
+        <a href="./vaga/2.html" class="row">
+          <img class="logo" src="./../assets/img/logos/btg.png" alt="Logo da empresa.">
           <div class="column space-between">
-            <h3 class="job-title">Desenvolvimento de Software</h3>
-            <p class="company-name">Giant Steps Capital</p>
-            <p>Faria Lima, São Paulo</p>
+            <h3 class="job-title">Estágio em Equity Research</h3>
+            <p class="company-name">BTG Pactual</p>
+            <p>Rio de Janeiro, Rio de Janeiro</p>
           </div>
         </a>
       </li>
 
-      <li class="job-card jobs--job-card" data-tags="ml">
-        <a href="./../pages/vaga.html" class="row">
-          <img class="logo" src="./../assets/img/companyLogo.png" alt="Logo da empresa.">
+      <li class="job-card jobs--job-card" data-tags="js ml">
+        <a href="./vaga/3.html" class="row">
+          <img class="logo" src="./../assets/img/logos/wildlife.webp" alt="Logo da empresa.">
           <div class="column space-between">
-            <h3 class="job-title">Back Office</h3>
-            <p class="company-name">BTG Pactual</p>
-            <p>Faria Lima, São Paulo</p>
+            <h3 class="job-title">Estágio em Desenvolvimento de Jogos</h3>
+            <p class="company-name">Wildlife Studios</p>
+            <p>São Paulo, São Paulo</p>
           </div>
         </a>
       </li>
 
       <li class="job-card jobs--job-card" data-tags="">
-        <a href="./../pages/vaga.html" class="row">
-          <img class="logo" src="./../assets/img/companyLogo.png" alt="Logo da empresa.">
+        <a href="./vaga/4.html" class="row">
+          <img class="logo" src="./../assets/img/logos/brex.png" alt="Logo da empresa.">
           <div class="column space-between">
-            <h3 class="job-title">Desenvolvimento de Jogos</h3>
-            <p class="company-name">Wildlife Studios</p>
-            <p>Faria Lima, São Paulo</p>
+            <h3 class="job-title">Estágio em Product Management</h3>
+            <p class="company-name">Brex</p>
+            <p>Remoto</p>
           </div>
         </a>
       </li>
