Fix broken link

--- a/pages/vaga/1.html
+++ b/pages/vaga/1.html
@@ -24,6 +24,10 @@
 
   <main>
     <div class="listing-header">
+      <div>
+        
+      </div>
+
       <h1 class="medium-heading">Estágio em Engenharia de Software</h1>
 
       <div class="listing-details row">
