--- a/pages/candidaturas.html
+++ b/pages/candidaturas.html
@@ -53,7 +53,7 @@
 
       </li>
       <li>
-        <a class="btn anchor" href="#">
+        <a class="btn anchor" href="./vagas.html">
           <span>Ver mais vagas</span>
           <img src="./../assets/img/icons/arrow.svg" alt="Arrow icon.">
         </a>
@@ -85,7 +85,7 @@
 
       </li>
       <li>
-        <a class="btn anchor" href="#">
+        <a class="btn anchor" href="./vagas.html">
           <span>Ver mais vagas</span>
           <img src="./../assets/img/icons/arrow.svg" alt="Arrow icon.">
         </a>
