Add go back to jobs page link

--- a/pages/vaga/1.html
+++ b/pages/vaga/1.html
@@ -24,8 +24,8 @@
 
   <main>
     <div class="listing-header">
-      <div>
-        
+      <div class="listing--go-back">
+        <a href="./../vagas.html">← Voltar para a página de vagas</a>
       </div>
 
       <h1 class="medium-heading">Estágio em Engenharia de Software</h1>
