--- a/pages/vaga/4.html
+++ b/pages/vaga/4.html
@@ -24,6 +24,9 @@
 
   <main>
     <div class="listing-header">
+      <div class="listing--go-back">
+        <a href="./../vagas.html">← Voltar para a página de vagas</a>
+      </div>
       <h1 class="medium-heading">Estágio em Product Management</h1>
 
       <div class="listing-details row">
