Add profile description

--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -23,12 +23,22 @@
       <img class="profile-header-picture" src="./../assets/img/profilePicture.png" alt="Foto de perfil do usuário.">
       <h1 class="user_name">Fulano DeTal</h1>
     </div>
+
     <div class="edit-prompt">
       <a href="./editar.html" class="edit-wrapper">
         <img class="edit-icon" src="./../assets/img/icons/editButton.svg" alt="Edit icon.">
         <p>Editar perfil</p>
       </a>
     </div>
+
+    <section class="section">
+      <h2 class="section-heading">Biografia</h2>
+
+      <p class="listing-description">
+        Sou estudante de Engenharia da Computação, atualmente no segundo período da faculdade. Sei programar em Python e Haskell e busco uma oportunidade de estágio no mercado financeiro.
+      </p>
+    </section>
+
     <section class="section">
       <h2 class="section-heading">Educação</h2>
       <ul>
