Pre-load input fields with current information

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <main>
     <div class="page-heading">
-      <h1 class="large-heading">Bom dia, Fulano</h1>
+      <h1 class="large-heading">Bom dia, Pedro</h1>
     </div>
 
     <section class="section">
