--- a/pages/editar.html
+++ b/pages/editar.html
@@ -25,6 +25,11 @@
     </div>
 
     <form id="edit-form">
+      <fieldset class="fieldset">
+        <label class="form--labels" for="fname">Biografia:</label>
+        <input id="edit-form--biography" class="input" type="text">
+      </fieldset>
+
       <fieldset class="fieldset fieldset-select">
         <label class="form--labels" for="cars">Universidade:</label>
         <select class="select" id="form-select-univeristy">
