--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -21,7 +21,7 @@
 
     <div class="profile-header column">
       <img class="profile-header-picture" src="./../assets/img/profilePicture.png" alt="Foto de perfil do usuário.">
-      <h1 class="user_name">Fulano DeTal</h1>
+      <h1 class="user_name">Pedro Stanzani</h1>
     </div>
 
     <div class="edit-prompt">
@@ -33,8 +33,7 @@
 
     <section class="section">
       <h2 class="section-heading">Biografia</h2>
-
-      <p class="listing-description">
+      <p class="listing-description" id="profile--biography">
         Sou estudante de Engenharia da Computação, atualmente no segundo período da faculdade. Sei programar em Python e Haskell e busco uma oportunidade de estágio no mercado financeiro.
       </p>
     </section>
