--- a/pages/vaga/1.html
+++ b/pages/vaga/1.html
@@ -9,6 +9,8 @@
 
   <link rel="stylesheet" href="./../../assets/css/reset.css">
   <link rel="stylesheet" href="./../../assets/css/style.css">
+
+  <script src="./../../assets/js/index.js"></script>
 </head>
 
 <body>
@@ -47,7 +49,7 @@
         Ad eligendi hic atque, maiores dolores dolorum magni odit cupiditate dolore quibusdam minus, natus, odio in sunt libero vel quo. Maiores eum, dicta amet mollitia aliquam quasi totam tempora quos.
       </p>
 
-      <a class="btn anchor" href="#">
+      <a class="btn anchor" href="#" id="applicationButton" data-job-id="1">
         <span>Aplicar</span>
         <img src="./../../assets/img/icons/arrow.svg" alt="Arrow icon.">
       </a>
